external-crates/move/crates/move-compiler/tests/move_check/parser/function_native_with_body.move
module 0x42::M {
    // Native functions should not specify a function body.
    native fun fn() {}
}
